// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root"
  role="group"
>
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="default"
    size="medium"
  />
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="default"
    size="medium"
  />
</div>
`;

exports[`rendering renders correctly priority 1`] = `
<div
  className="root"
  role="group"
>
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="outline"
    size="medium"
  />
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="outline"
    size="medium"
  />
</div>
`;

exports[`rendering renders correctly size 1`] = `
<div
  className="root"
  role="group"
>
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="default"
    size="large"
  />
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="default"
    size="large"
  />
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootBlock"
  role="group"
>
  <ForwardRef(withForwardedRef(Button))
    block={true}
    disabled={true}
    grouped={true}
    key=".0"
    label="One"
    priority="outline"
    size="small"
  />
  <ForwardRef(withForwardedRef(Button))
    block={true}
    disabled={true}
    grouped={true}
    key=".1"
    label="Two"
    priority="outline"
    size="small"
  />
</div>
`;

exports[`rendering renders correctly with html element attributes 1`] = `
<div
  className="root"
  role="group"
>
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="default"
    size="medium"
    tabIndex={-1}
  />
  <ForwardRef(withForwardedRef(Button))
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="default"
    size="medium"
    tabIndex={-1}
  />
</div>
`;
